samples/_failures_safe/1761089397_f31f5f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_62400532.c: In function ‘main’:
./samples/SAFE/__tmp_62400532.c:160:5: error: expected identifier or ‘(’ at end of input
  160 |     size_t
      |     ^~~~~~
./samples/SAFE/__tmp_62400532.c:160:5: error: expected declaration or statement at end of input
